 * Fixed a bug where the default ignore list could not be empty (`configure(default_ignore_list=[])`)
 * All `tick()` methods now return the new datetime (instead of None)
 * Type improvements

1.4.0
-----
 * `asyncio`-support from 1.3.x introduced quite a few  bugs, so that functionality is now hidden behind a flag:
   `with freeze_time('1970-01-02', real_asyncio=True):`

1.3.1
-----
 * Fixed the release number in the build

1.3.0
-----

* Fixed `asyncio` support to avoid `await asyncio.sleep(1)` hanging forever.

* Added support for Python 3.12


1.2.2
-----

* Removes Python 3.6 support, which reached its EOL on 2021-12-23 (https://devguide.python.org/versions/?highlight=End-of-life#unsupported-versions).

* Improved static typing definitions

* Don't freeze pytest timings. This avoids class-level decorator usage messing with pytest timings.

* Pass through all setUp and tearDown arguments


1.2.1
-----

* Added missing typeshed types from distribution

* Pass all arguments on recursive freeze_time calls


1.2.0
-----

* Add support for `time.perf_counter` (and `…_ns`)

* Added typeshed types

* Dropped support for python 3.5

1.1.0
-----

* Add support for `time.monotonic` (and `…_ns`)

* Allow to configure default ignore list, and also to just extend the default

* Fixed when accessing from thread after stop()


1.0.0
------

* Dropped Py2 support
* Added as_kwarg argument in order to have the frozen time object passed with the name provided in as_kwarg argument

0.3.15
------

* Fix locale timestamp bug. CC #328

0.3.14
------

* Fix calendar.timegm behavior

0.3.13
------

* Fix for Py3.8
* Reset time.time_ns on stop

0.3.12
------

* Refactor classes to functions
* Ignore Selenium
* Move to pytest
* Conditionally patch time.clock
* Patch time.time_ns added in Python 3.7

0.3.11
------

* Performance improvements
* Fix nesting time.time
* Add nanosecond property

0.3.10
------

* Performance improvements
* Coroutine support

0.3.9
-----
