@@ -18,6 +18,7 @@ Freezegun Changelog
 -----
  * `asyncio`-support from 1.3.x introduced quite a few  bugs, so that functionality is now hidden behind a flag:
    `with freeze_time('1970-01-02', real_asyncio=True):`
+ * Added documentation for the `real_asyncio` parameter in the `README.rst` file.
 
 1.3.1
 -----
